--- a/Express Intro/myapp/views/index.pug
+++ b/Express Intro/myapp/views/index.pug
@@ -6,3 +6,9 @@ block content
   a(href="/abrirArchivo/Alexander Hdez P") Abrir documento
   br
   a(href="/descargar/Alexander Hdez P") Descargar documento
+  br
+  a(href="/video-static") Ver video static
+  br
+  a(href="/video-stream") Ver video con streams
+  br
+  a(href="/video-rango") Ver video con streams con rangos
